--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout3"
+    android:id="@+id/relativeLayout5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
@@ -15,6 +15,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_weight="1"
@@ -41,19 +42,23 @@
         android:id="@+id/toolbar1"
         android:layout_width="match_parent"
         android:layout_height="97dp"
+        android:layout_alignBottom="@+id/toolbar"
         android:layout_weight="1"
         android:background="#00BCD4"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
         app:title="                 Suction cups manipulation"
         app:titleMargin="4dp"
         app:titleTextColor="#050505"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="97dp" />
+        tools:layout_editor_absoluteX="0dp" />
 
     <ImageButton
         android:id="@+id/suctionCup3"
         android:layout_width="111dp"
         android:layout_height="105dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="239dp"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="235dp"
@@ -68,6 +73,9 @@
         android:id="@+id/suctionCup1"
         android:layout_width="111dp"
         android:layout_height="105dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="149dp"
         android:layout_marginEnd="148dp"
         android:layout_marginBottom="422dp"
@@ -82,6 +90,9 @@
         android:id="@+id/suctionCup2"
         android:layout_width="111dp"
         android:layout_height="105dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="62dp"
         android:layout_marginEnd="237dp"
         android:layout_marginBottom="235dp"
@@ -96,6 +107,9 @@
         android:id="@+id/innerSuctionCups"
         android:layout_width="111dp"
         android:layout_height="105dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="149dp"
         android:layout_marginEnd="148dp"
         android:layout_marginBottom="312dp"
@@ -110,6 +124,9 @@
         android:id="@+id/perimeterCups"
         android:layout_width="192dp"
         android:layout_height="94dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="116dp"
         android:layout_marginEnd="105dp"
         android:layout_marginBottom="20dp"
@@ -125,6 +142,9 @@
         android:id="@+id/allSuctionCups"
         android:layout_width="192dp"
         android:layout_height="94dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="114dp"
         android:layout_marginEnd="106dp"
         android:layout_marginBottom="129dp"
