--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -1,86 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:background="#FFFEFE"
-    android:backgroundTint="#FFFFFF"
 
+    android:backgroundTint="#FFFDF7"
     tools:context="com.example.myapplication.MainActivity">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/extraFineUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="42dp"
         android:layout_weight="1"
         android:clickable="true"
-        app:backgroundTint="#FFEB3B"
+        app:backgroundTint="#3F51B5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/arrow_up_float" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fineUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="27dp"
         android:layout_marginBottom="112dp"
         android:layout_weight="1"
         android:clickable="true"
-        app:backgroundTint="#FFEB3B"
+        app:backgroundTint="#3F51B5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/arrow_up_float" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/extraFineDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="295dp"
         android:layout_marginBottom="44dp"
         android:layout_weight="1"
         android:clickable="true"
-        app:backgroundTint="#FFEB3B"
+        app:backgroundTint="#3F51B5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/arrow_down_float" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/largeDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="295dp"
         android:layout_marginBottom="182dp"
         android:layout_weight="1"
         android:clickable="true"
-        app:backgroundTint="#FFEB3B"
+        app:backgroundTint="#3F51B5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/arrow_down_float" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fineDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="295dp"
         android:layout_marginBottom="113dp"
         android:layout_weight="1"
         android:clickable="true"
-        app:backgroundTint="#FFEB3B"
+        app:backgroundTint="#3F51B5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/arrow_down_float" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_weight="1" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -90,6 +96,8 @@
         android:layout_weight="1"
         android:background="#8BC34A"
         android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
         app:title="                Connected to your Robot"
         app:titleMargin="4dp"
@@ -97,203 +105,203 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="79dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:layout_width="72dp"
+        android:layout_height="77dp"
         android:layout_marginStart="168dp"
         android:layout_marginEnd="161dp"
         android:layout_marginBottom="331dp"
         android:layout_weight="1"
-        android:background="@drawable/circle_button" />
+        android:background="@drawable/circle_button"
+        android:backgroundTint="#F44336"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/bw3"
         android:layout_width="95dp"
         android:layout_height="88dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="52dp"
         android:layout_marginEnd="264dp"
         android:layout_marginBottom="379dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:backgroundTint="#FF9800"
-        android:text="BW3" />
+        android:text="BW3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/fw1"
         android:layout_width="87dp"
         android:layout_height="85dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="166dp"
         android:layout_marginEnd="158dp"
         android:layout_marginBottom="419dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:backgroundTint="#FF9800"
-        android:text="FW1" />
+        android:text="FW1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/bw2"
         android:layout_width="91dp"
         android:layout_height="88dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="270dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="381dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:backgroundTint="#FF9800"
-        android:text="BW2" />
+        android:text="BW2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/fw3"
         android:layout_width="88dp"
         android:layout_height="85dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="270dp"
         android:layout_marginEnd="53dp"
         android:layout_marginBottom="272dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:backgroundTint="#FF9800"
-        android:text="FW3" />
+        android:text="FW3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/fw2"
         android:layout_width="96dp"
         android:layout_height="90dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="265dp"
         android:layout_marginBottom="269dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:backgroundTint="#FF9800"
-        android:text="FW2" />
+        android:text="FW2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/bw1"
         android:layout_width="90dp"
         android:layout_height="87dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="163dp"
         android:layout_marginEnd="158dp"
         android:layout_marginBottom="236dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:color="#FF9800"
-        android:text="BW1"></Button>
+        android:backgroundTint="#FF9800"
+        android:text="BW1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/circular"
         android:layout_width="127dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="142dp"
         android:layout_marginEnd="142dp"
         android:layout_marginBottom="555dp"
         android:layout_weight="1"
-        android:text="Circular" />
+        android:backgroundTint="#673AB7"
+        android:text="Circular"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/rectangular"
         android:layout_width="178dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="115dp"
         android:layout_marginEnd="118dp"
         android:layout_marginBottom="509dp"
         android:layout_weight="1"
-        android:text="RECTANGULAR" />
+        android:backgroundTint="#673AB7"
+        android:text="RECTANGULAR"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/addNew"
         android:layout_width="wrap_content"
         android:layout_height="73dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="528dp"
         android:layout_weight="1"
-        android:text="Add New" >
-    </Button>
-
+        android:backgroundTint="#673AB7"
+        android:text="Add New"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="79dp"
         android:layout_marginBottom="57dp"
         android:layout_weight="1"
         android:text="Extra Fine Retract"
         android:textColor="#000000"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="163dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="116dp"
         android:layout_marginBottom="127dp"
         android:layout_weight="1"
         android:text="Fine Retract"
         android:textColor="#000000"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="163dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="117dp"
         android:layout_marginBottom="191dp"
         android:layout_weight="1"
         android:text="Large Retract"
-        android:textSize="24sp" />
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/largeup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="184dp"
         android:layout_weight="1"
         android:clickable="true"
-        app:backgroundTint="#FFEB3B"
+        app:backgroundTint="#3F51B5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/arrow_up_float" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
