--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -39,9 +39,10 @@
         android:layout_marginBottom="440dp"
         android:layout_weight="1"
         android:background="#FFEB3B"
-        android:backgroundTint="#FFEB3B"
+        android:backgroundTint="#00B8D4"
         android:clickable="true"
         android:foregroundTint="#000000"
+        android:tint="#000000"
         app:backgroundTint="#000000"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
 
@@ -54,10 +55,12 @@
         android:layout_marginEnd="258dp"
         android:layout_marginBottom="438dp"
         android:layout_weight="1"
+        android:backgroundTint="#00B8D4"
         android:clickable="true"
         android:rotation="0"
         android:rotationX="0"
         android:rotationY="180"
+        android:tint="#000000"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
 
@@ -70,7 +73,9 @@
         android:layout_marginEnd="187dp"
         android:layout_marginBottom="275dp"
         android:layout_weight="1"
+        android:backgroundTint="#00B8D4"
         android:clickable="true"
+        android:tint="#000000"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
 
@@ -84,10 +89,12 @@
         android:layout_marginEnd="352dp"
         android:layout_marginBottom="276dp"
         android:layout_weight="1"
+        android:backgroundTint="#00B8D4"
         android:clickable="true"
         android:rotation="0"
         android:rotationX="0"
         android:rotationY="180"
+        android:tint="#000000"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
 
@@ -100,7 +107,9 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="277dp"
         android:layout_weight="1"
+        android:backgroundTint="#00B8D4"
         android:clickable="true"
+        android:tint="#000000"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
 
@@ -113,10 +122,12 @@
         android:layout_marginEnd="167dp"
         android:layout_marginBottom="273dp"
         android:layout_weight="1"
+        android:backgroundTint="#00B8D4"
         android:clickable="true"
         android:rotation="0"
         android:rotationX="0"
         android:rotationY="180"
+        android:tint="#000000"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
 
@@ -132,7 +143,9 @@
         android:layout_marginBottom="438dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:text="FW1" />
+        android:backgroundTint="#3F51B5"
+        android:text="FW1"
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/fw3"
@@ -146,7 +159,9 @@
         android:layout_marginBottom="274dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:text="FW3" />
+        android:backgroundTint="#3F51B5"
+        android:text="FW3"
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/fw2"
@@ -160,7 +175,9 @@
         android:layout_marginBottom="274dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:text="FW2" />
+        android:backgroundTint="#3F51B5"
+        android:text="FW2"
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/bw2"
@@ -174,7 +191,9 @@
         android:layout_marginBottom="374dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:text="BW2" />
+        android:backgroundTint="#3F51B5"
+        android:text="BW2"
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/bw3"
@@ -188,7 +207,9 @@
         android:layout_marginBottom="376dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:text="BW3" />
+        android:backgroundTint="#3F51B5"
+        android:text="BW3"
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/bw1"
@@ -202,7 +223,9 @@
         android:layout_marginBottom="202dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:text="BW1" />
+        android:backgroundTint="#3F51B5"
+        android:text="BW1"
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/drillMode"
@@ -241,7 +264,8 @@
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="332dp"
         android:layout_weight="1"
-        android:background="@drawable/circle_button" />
+        android:background="@drawable/circle_button"
+        android:backgroundTint="#3F51B5" />
 
     <Button
         android:id="@+id/Home"
