--- a/app/src/main/res/layout/activity_main6.xml
+++ b/app/src/main/res/layout/activity_main6.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1">
 
-    <RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/relativeLayout6"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="#FFFEFE"
-        android:backgroundTint="#FFFDF7"
 
+        android:backgroundTint="#FFFDF7"
         tools:context="com.example.myapplication.MainActivity"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="158dp">
@@ -21,8 +18,13 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_weight="1" />
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -31,6 +33,8 @@
             android:layout_weight="1"
             android:background="#8BC34A"
             android:textAlignment="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
             app:title="                Connected to your Robot"
             app:titleMargin="4dp"
@@ -40,13 +44,14 @@
             android:id="@+id/toolbar3"
             android:layout_width="match_parent"
             android:layout_height="82dp"
-            android:layout_below="@+id/toolbar"
-            android:layout_alignParentBottom="true"
             android:layout_marginTop="-4dp"
             android:layout_marginBottom="533dp"
             android:layout_weight="1"
             android:background="#FFEB3B"
             android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
             app:title="          Advanced Manipulation Modes"
             app:titleMargin="4dp"
@@ -56,13 +61,12 @@
             android:id="@+id/manipList"
             android:layout_width="335dp"
             android:layout_height="466dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
             android:layout_marginEnd="39dp"
             android:layout_marginBottom="46dp"
             android:layout_weight="1"
-            android:background="#673AB7" />
+            android:background="#673AB7"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
-    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
