--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -11,6 +11,111 @@
     android:backgroundTint="#FFFFFF"
     tools:context="com.example.myapplication.MainActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/aclk1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:contentDescription="aclk1"
+        android:foregroundTint="#000000"
+        android:rotationY="180"
+        android:tint="#000000"
+        app:backgroundTint="#FFEB3B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.349"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.407"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/clk1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:contentDescription="clk1"
+        android:foregroundTint="#000000"
+        android:tint="#000000"
+        app:backgroundTint="#FFEB3B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.673"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.407"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/aclk2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:contentDescription="aclk2"
+        android:foregroundTint="#000000"
+        android:rotationY="180"
+        android:tint="#000000"
+        app:backgroundTint="#FFEB3B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.084"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.64"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/clk2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:contentDescription="clk2"
+        android:foregroundTint="#000000"
+        android:tint="#000000"
+        app:backgroundTint="#FFEB3B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.405"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.64"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/aclk3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:contentDescription="aclk3"
+        android:foregroundTint="#000000"
+        android:rotationY="180"
+        android:tint="#000000"
+        app:backgroundTint="#FFEB3B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.602"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.64"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/clk3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:contentDescription="clk3"
+        android:foregroundTint="#000000"
+        android:tint="#000000"
+        app:backgroundTint="#FFEB3B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.932"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.641"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -67,7 +172,6 @@
         android:layout_height="57dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="242dp"
-        android:layout_marginBottom="248dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:backgroundTint="#3F51B5"
@@ -75,89 +179,10 @@
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="70dp"
-        android:layout_height="66dp"
-        android:layout_marginStart="158dp"
-        android:layout_marginEnd="157dp"
-        android:layout_marginBottom="320dp"
-        android:layout_weight="1"
-        android:background="@drawable/circle_button"
-        android:backgroundTint="#3F51B5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.653"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/clk2"
-        android:layout_width="57dp"
-        android:layout_height="67dp"
-        android:layout_marginEnd="208dp"
-        android:layout_marginBottom="248dp"
-        android:layout_weight="1"
-        android:backgroundTint="#00B8D4"
-        android:clickable="true"
-        android:tint="#000000"
-        app:backgroundTint="#FFEB3B"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_rotate" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/aclk2"
-        android:layout_width="57dp"
-        android:layout_height="58dp"
-        android:layout_marginEnd="336dp"
-        android:layout_marginBottom="248dp"
-        android:layout_weight="1"
-        android:backgroundTint="#00B8D4"
-        android:clickable="true"
-        android:rotation="0"
-        android:rotationX="0"
-        android:rotationY="180"
-        android:tint="#000000"
-        app:backgroundTint="#FFEB3B"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_rotate" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/clk3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="248dp"
-        android:layout_weight="1"
-        android:backgroundTint="#00B8D4"
-        android:clickable="true"
-        android:tint="#000000"
-        app:backgroundTint="#FFEB3B"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_rotate" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/aclk3"
-        android:layout_width="57dp"
-        android:layout_height="57dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginBottom="248dp"
-        android:layout_weight="1"
-        android:backgroundTint="#00B8D4"
-        android:clickable="true"
-        android:rotation="0"
-        android:rotationX="0"
-        android:rotationY="180"
-        android:tint="#000000"
-        app:backgroundTint="#FFEB3B"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_rotate" />
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.64" />
 
     <Button
         android:id="@+id/fw1"
@@ -165,7 +190,7 @@
         android:layout_height="56dp"
         android:layout_marginStart="155dp"
         android:layout_marginEnd="149dp"
-        android:layout_marginBottom="408dp"
+        android:layout_marginBottom="400dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:backgroundTint="#3F51B5"
@@ -173,42 +198,8 @@
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/aclk1"
-        android:layout_width="57dp"
-        android:layout_height="53dp"
-        android:layout_marginEnd="240dp"
-        android:layout_marginBottom="408dp"
-        android:layout_weight="1"
-        android:backgroundTint="#00B8D4"
-        android:clickable="true"
-        android:rotation="0"
-        android:rotationX="0"
-        android:rotationY="180"
-        android:tint="#000000"
-        app:backgroundTint="#FFEB3B"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_rotate" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/clk1"
-        android:layout_width="54dp"
-        android:layout_height="54dp"
-        android:layout_marginEnd="112dp"
-        android:layout_marginBottom="408dp"
-        android:layout_weight="1"
-        android:background="#FFEB3B"
-        android:backgroundTint="#00B8D4"
-        android:clickable="true"
-        android:foregroundTint="#000000"
-        android:tint="#000000"
-        app:backgroundTint="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_rotate" />
 
     <Button
         android:id="@+id/fw3"
@@ -216,7 +207,7 @@
         android:layout_height="59dp"
         android:layout_marginStart="243dp"
         android:layout_marginEnd="59dp"
-        android:layout_marginBottom="248dp"
+        android:layout_marginBottom="240dp"
         android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:backgroundTint="#3F51B5"
@@ -224,6 +215,7 @@
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.562"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -299,6 +291,18 @@
         android:text="Raise End Effector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.549"
+        app:srcCompat="@drawable/circle_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
