--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_weight="1"
-        android:background="#8BC34A"
+        android:background="#FFEB3B"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
